# YouBetterWork

./: .gitignore  Cargo.toml  README.md
Decorators/: Cargo.toml
Decorators/src/: lib.rs
Signaler/: Cargo.toml
Signaler/examples/: complex.rs  macro.rs  minimal.rs
Signaler/src/: lib.rs
Signaler/tests/: big_struct.rs  inner.rs  simple.rs
examples/: complex.rs  minimal.rs
sinais/: Cargo.toml
sinais/examples/: macro.rs
sinais/src/: lib.rs
sinais/tests/: big_struct.rs  inner.rs  simple.rs
sinais_macro/: Cargo.toml
src/: lib.rs  main.rs
