[package]
name = "signal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
