[package]
name = "decorators"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# [[test]]
# name = "simple"
# bench = true

[dependencies]
syn = "2.0"
quote = "1.0"
tokio = { version = "1", features = ["full"] }
# uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
proc-macro2 = "1.0.78"
