[package]
name = "signal"
version = "0.1.0"
edition = "2021"

[lib]

[[test]]
name = "simple"
bench = true

[dependencies]
decorators = { path = "../Decorators" }
lazy_static = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }

[dev-dependencies]
rand = "0.8.5"
rand_derive2 = "0.1.21"
random_name_generator = "0.3.6"
test-log = "0.2.15"
