[package]
name = "sinais"
version = "0.1.0"
edition = "2021"
description = "A simple signal event library"
license = "MIT"
repository = "https://github.com/patrickelectric"

[lib]

[[test]]
name = "simple"
bench = true

[dependencies]
sinais_macro = { version = "0", path = "../sinais_macro" }
lazy_static = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }

[dev-dependencies]
rand = "0.8.5"
rand_derive2 = "0.1.21"
random_name_generator = "0.3.6"
test-log = "0.2.15"
