[package]
name = "sinais_macro"
version = "0.1.0"
edition = "2021"
description = "A macro repository for the `sinais` simple signal event library"
license = "MIT"
repository = "https://github.com/patrickelectric"


[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
tokio = { version = "1", features = ["full"] }
proc-macro2 = "1.0.78"
